Fix opensearch install and add diags, fix chainsaw install